# muscles_lab

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
muscles_lab/: __init__.py  dataset.py  features.py  plots.py
muscles_lab/modeling/: predict.py  train.py
notebooks/: Data_augmentation_testing.ipynb
notebooks/data_processing/: data_processing_dicom_to_nifti.ipynb  data_processing_test_script.ipynb  marines_data_processing.ipynb  nifti_to_hdf5.py  visualize_marines_data.ipynb
notebooks/old_notebooks/: ._Training_with_augmentation.ipynb
