[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "muscles_lab"
version = "0.0.1"
description = "Implementing and training UNet architecture for automated spine muscle segmentation in MRI data, improving analysis efficiency for Naval Health Research Center's (NHRC) Warfighter Performance study."
authors = [
  { name = "Subash Katel" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["muscles_lab"]
force_sort_within_sections = true
